--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,44 @@
-/venv
-.idea
+# Byte-compiled / optimized / DLL files
+.idea/
 __pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+dist/
+build/
+eggs/
+*.egg-info/
+
+# Virtual environment
+venv/
+env/
+.venv/
+.env
+
+# Django generated files
+*.log
+*.pot
+*.pyc
 db.sqlite3
+
+# Media files
+media/
+
+# Static files
+staticfiles/
+
+# Temporary files
+*.swp
+*.~lock.*
+
+# PostgreSQL data directory
+postgres_data/
+
+# PostgreSQL backup files
+*.bak
+*.pg_dump
+*.pg_dumpall
